<resources>
    <string name="app_name">demo1</string>
    <string name="button_finbill">会計完了</string>
    <string name="button_inputpay">OK</string>
    <string name="edit_totalbill">合計金額</string>
    <string name="edit_payment">お預かり</string>
    <string name="print_change">おつり</string>
    <string name="formula_text" />
    <string name="paid_text" />
    <string name="total_text" />
    <string name="change_text" />
    <string name="ordertotal_text" />
    <string name="order_send">注文</string>
    <string name="bill_start">会計</string>
    <string name="menu1" />
    <string name="menu2" />
    <string name="menu3" />
    <string name="menu4" />
    <string name="menu5" />
    <string name="menu6" />
    <string name="menu7" />
    <string name="menu8" />
    <string name="menu9" />
    <string name="menu10" />
    <string name="ordered_text1" />
    <string name="ordered_text2" />
    <string name="ordered_text3" />
    <string name="ordered_text4" />
    <string name="ordered_text5" />
    <string name="ordered_text6" />
    <string name="ordered_text7" />
    <string name="ordered_text8" />
    <string name="ordered_text9" />
    <string name="ordered_text10" />
    <string name="cancel">取消</string>
    <string name="menuview_text" />
</resources>