<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="635dp"
        android:layout_height="380dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="139dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/menu1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu1"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu2"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu3"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu4"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu5"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu6"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu7"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu8"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu9"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/menu10"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/menu10"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="619dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/order_send"
                android:textSize="34sp" />

            <Button
                android:id="@+id/billstart"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/bill_start"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/ordertotal"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/ordertotal_text"
                android:textAlignment="viewEnd"
                android:textSize="34sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>