<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="705dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout10"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menuview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuview_text"
            android:textSize="34sp" />
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout10"
        android:layout_width="546dp"
        android:layout_height="417dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/edit_totalbill"
                android:inputType="textPersonName"
                android:text="合計金額"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/total_print"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/total_text"
                android:inputType="textPersonName"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/edit_payment"
                android:inputType="textPersonName"
                android:text="お預かり"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/paid"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/paid_text"
                android:inputType="textPersonName"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/print_change"
                android:inputType="textPersonName"
                android:text="おつり"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/change_print"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/change_text"
                android:inputType="textPersonName"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BillFin"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:text="@string/button_finbill"
                android:textSize="48sp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout6"
        android:layout_width="0dp"
        android:layout_height="492dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/formula"
                android:layout_width="wrap_content"
                android:layout_height="84dp"
                android:layout_weight="1"
                android:background="@drawable/frame"
                android:text="@string/formula_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="1"
                android:textSize="34sp" />

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="2"
                android:textSize="34sp" />

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="3"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="4"
                android:textSize="34sp" />

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="5"
                android:textSize="34sp" />

            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="6"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="7"
                android:textSize="34sp" />

            <Button
                android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="8"
                android:textSize="34sp" />

            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="9"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num0"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="0"
                android:textSize="34sp" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:backgroundTint="@color/design_default_color_error"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:backgroundTint="@color/teal_200"
                android:text="OK"
                android:textColor="@color/black"
                android:textSize="34sp" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>